[project]
name = "vision-toolbox"
version = "0.1.0"
description = "Universal file analyzer via NVIDIA free multimodal API — images, PDFs, videos, Office docs, and code"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "pillow>=10.0",
    "python-docx>=1.0",
    "openpyxl>=3.1",
    "python-pptx>=1.0",
]

[project.scripts]
vision = "src.vision:main"
